# whatstauri

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml  tag-on-version.yml
docs/: smoke-checklist.md
docs/superpowers/plans/: 2026-06-11-whatstauri-v1.md  2026-06-14-last-message-received.md
docs/superpowers/specs/: 2026-06-11-whatstauri-design.md  2026-06-14-last-message-received-design.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: badge-font.LICENSE.txt
src-tauri/capabilities/: remote.json
src-tauri/inject/: notification-shim.js  title-watcher.js
src-tauri/permissions/autogenerated/: debug_log.toml  deliver_notification.toml  report_title.toml
src-tauri/src/: badge.rs  config.rs  last_message.rs  lib.rs  links.rs  main.rs  notifications.rs  tray.rs  unread.rs  window.rs  wipe.rs
