[package]
name = "whatstauri"
version = "0.1.1"
description = "Lightweight WhatsApp Web wrapper (unofficial)"
edition = "2021"
rust-version = "1.77.2"

[lib]
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
notify-rust = "4"
url = "2"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
